--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout 👻
         uses: actions/checkout@v2.3.1
 
+      - name: install node v12
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+
       - name: Install and Build 😈
         run: |
           yarn
