--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "main": "dist/bundle.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js --watch",
+    "start": "yarn build:ts && yarn build:rollup",
     "build": "yarn build:ts && yarn build:rollup",
     "build:ts": "tsc",
     "build:rollup": "rollup --config rollup.config.js"
