--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   },
   "author": "evg-b",
   "devDependencies": {
-    "express": "^4.17.1",
     "rollup": "^2.52.1",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.3.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
